--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,16 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <hutool.version>5.3.10</hutool.version>
     </properties>
+
+    <dependencies>
+        <!-- hutool -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
